fix: テストカバレッジ閾値対応 - MDXレッスンにprerequisites追加 - loader.tsの新関数のテストを追加 - sort.tsのgetLessonsForRoadmapテストを追加 - vitest設定からe2e/toolsをカバレッジ計測対象外に

--- a/src/content/lessons/react-forms.mdx
+++ b/src/content/lessons/react-forms.mdx
@@ -6,6 +6,7 @@ tags: ['react', 'forms', 'react-hook-form', 'validation']
 difficulty: 'intermediate'
 estimatedMinutes: 30
 exerciseId: 'form-exercise'
+prerequisites: ['useState-hook']
 ---
 
 # フォーム処理：react-hook-form
