--- a/src/content/lessons/useState-hook.mdx
+++ b/src/content/lessons/useState-hook.mdx
@@ -6,6 +6,7 @@ tags: ['react', 'hooks', 'useState', 'state']
 difficulty: 'beginner'
 estimatedMinutes: 20
 exerciseId: 'counter-exercise'
+prerequisites: ['react-basics']
 ---
 
 # useState：状態管理の基本
