--- a/src/content/lessons/useEffect-hook.mdx
+++ b/src/content/lessons/useEffect-hook.mdx
@@ -5,6 +5,7 @@ description: 'useEffectフックを使った副作用の管理方法を学びま
 tags: ['react', 'hooks', 'useEffect', 'lifecycle']
 difficulty: 'intermediate'
 estimatedMinutes: 25
+prerequisites: ['useState-hook']
 ---
 
 # useEffect：副作用の管理
